tests/snapshots/examples_fixtures/type_system__failing__64_hm_inferred_call_mismatch.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/64_hm_inferred_call_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `f`.

  examples/type_system/failing/64_hm_inferred_call_mismatch.flx:8:20
  |
8 |     let b: Int = f("x")
  |                    ^^^
  |                    --- this argument has type `String`

Note:
  expected argument type: Int
  found argument type: String
  the actual argument type is inferred from this expression

Help:
  Pass a `Int` value as the 1st argument.


Note: Downstream Errors Suppressed

I hid 1 later-stage diagnostic (1 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.
== stdout ==
<not executed>
